--- a/package.json
+++ b/package.json
@@ -13,19 +13,29 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tsconfig/svelte": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "flowbite": "^2.2.1",
+    "flowbite-svelte": "^0.44.20",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
     "prettier": "^3.0.2",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@tsconfig/svelte": "^5.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "svelte": "^4.2.3",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.3.6",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "flowbite-svelte-icons": "^0.4.5"
   }
 }
